# zoyla

./: .gitignore  .oxlintrc.json  .prettierignore  AGENTS.md  LICENSE  README.md  index.html  knip.config.ts  package-lock.json  package.json  prod-logs.csv  vite.config.ts
.github/: dependabot.yml
.github/workflows/: pr-check.yml  release.yml  update-homebrew.yml
docs/: macos-signing-guide.md
scripts/: build-macos-signed.sh  sync-version.js  update-homebrew.sh  version-bump.js
src/: App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/buttons/: CopyButton.tsx  Tooltip.tsx  buttons.css.ts  index.ts
src/components/charts/: AreaChartPanel.tsx  BarChartPanel.tsx  ChartInfoButton.tsx  ChartTooltip.tsx  LineChartPanel.tsx  ScatterChartPanel.tsx  charts.css.ts  (+2 more)
src/constants/: defaults.ts
src/hooks/: index.ts  useKeyboardShortcuts.ts  usePersistence.ts  useResizable.ts  useTestRunner.ts
src/layouts/: AppShell.css.ts  AppShell.tsx  MainContent.css.ts  MainContent.tsx  Sidebar.css.ts  Sidebar.tsx  StatusBar.css.ts  StatusBar.tsx  Toolbar.css.ts  Toolbar.tsx  index.ts
src/store/: historyStore.ts  index.ts  testConfigStore.ts  testRunnerStore.ts  uiStore.ts
src/styles/: global.css.ts  index.ts  theme.css.ts
src/types/: api.ts  components.ts  index.ts  store.ts
src/utils/: concurrency.ts  format.ts  headers.ts  index.ts  json.ts  payload.ts  transform.ts
test-server/: index.js  package-lock.json  package.json
(+49 files in other folders)
